syntax = "proto3";

package foreverbull.backtest;

option go_package = "github.com/lhjnilsson/foreverbull/pkg/backtest/pb";

import "foreverbull/common.proto";
import "google/protobuf/timestamp.proto";

message Backtest {
    message Status {
        enum Status {
            CREATED = 0;
            READY = 1;
            ERROR = 2;
        }
        Status status = 1;
        optional string error = 2;
        google.protobuf.Timestamp occurred_at = 3;
    }
    string name = 1;
    foreverbull.common.Date start_date = 2;
    foreverbull.common.Date end_date = 3;
    repeated string symbols = 4;
    optional string benchmark = 5;

    repeated Status statuses = 6;
}
